Add people images for team section. Add secondary color. Implement team section. Update watch section to match the design.

--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,81 @@
       </div>
     </section>
 
+    <section class="team container">
+      <h2 class="team__title title u-text-center">Our Team</h2>
+      <p class="team__intro text mod-bold u-text-center">
+        Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque neque. In sit amet lectus non lacus sollicitudin cursus a vitae felis. Praesent luctus mi quis nisi interdum eleifend.
+      </p>
+
+      <div class="team__item u-text-center u-left">
+        <div class="team__block">
+          <img src="images/team/team-1.jpg" alt="Jon Doe" class="team__photo" />
+          <div class="team__info">
+            <h4 class="team__subtitle text mod-regular mod-bold">Aenean ut suscipit urna. Donec efficitur</h4>
+            <p class="team__desc text mod-regular">sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+            <div class="team__social">
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+            </div>
+          </div>
+        </div>
+        <h3 class="team__name text mod-medium mod-semi-bold">Jon Doe</h3>
+        <span class="team__position text mod-small">Managing Director</span>
+      </div>
+
+      <div class="team__item u-text-center u-left">
+        <div class="team__block">
+          <img src="images/team/team-2.jpg" alt="Jon Doe" class="team__photo" />
+          <div class="team__info">
+            <h4 class="team__subtitle text mod-regular mod-bold">Aenean ut suscipit urna. Donec efficitur</h4>
+            <p class="team__desc text mod-regular">sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+            <div class="team__social">
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+            </div>
+          </div>
+        </div>
+        <h3 class="team__name text mod-medium mod-semi-bold">Jon Doe</h3>
+        <span class="team__position text mod-small">Lead Designer</span>
+      </div>
+
+      <div class="team__item u-text-center u-left">
+        <div class="team__block">
+          <img src="images/team/team-3.jpg" alt="Jon Doe" class="team__photo" />
+          <div class="team__info">
+            <h4 class="team__subtitle text mod-regular mod-bold">Aenean ut suscipit urna. Donec efficitur</h4>
+            <p class="team__desc text mod-regular">sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+            <div class="team__social">
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+            </div>
+          </div>
+        </div>
+        <h3 class="team__name text mod-medium mod-semi-bold">Jon Doe</h3>
+        <span class="team__position text mod-small">Lead Developer</span>
+      </div>
+
+      <div class="team__item u-text-center u-left">
+        <div class="team__block">
+          <img src="images/team/team-4.jpg" alt="Jon Doe" class="team__photo" />
+          <div class="team__info">
+            <h4 class="team__subtitle text mod-regular mod-bold">Aenean ut suscipit urna. Donec efficitur</h4>
+            <p class="team__desc text mod-regular">sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+            <div class="team__social">
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+              <a href="#" class="team__link"></a>
+            </div>
+          </div>
+        </div>
+        <h3 class="team__name text mod-medium mod-semi-bold">Jon Doe</h3>
+        <span class="team__position text mod-small">Sr. UI Designer</span>
+      </div>
+    </section>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
