Add bottom section background. Add customer photo. Add line white. Add fontello icons. Add input component. Update title comp. Implement contact, footer and customers section.

--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
       </div>
     </section>
 
-    <section class="team container">
+    <section class="team container u-clear">
       <h2 class="team__title title u-text-center">Our Team</h2>
       <p class="team__intro text mod-bold u-text-center">
         Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque neque. In sit amet lectus non lacus sollicitudin cursus a vitae felis. Praesent luctus mi quis nisi interdum eleifend.
@@ -229,6 +229,78 @@
         <span class="team__position text mod-small">Sr. UI Designer</span>
       </div>
     </section>
+
+    <section class="customers">
+      <h2 class="customers__title title u-text-center">What our customer’s say</h2>
+
+      <div class="customers__container">
+        <div class="customer__item u-text-center">
+          <figure class="customer__photo">
+            <img src="images/customer-photo.png" alt="Jon Doe">
+            <figcaption>
+              <span class="customer__name text mod-medium mod-bold">Jon Doe</span>
+              <span class="customer__company text mod-small">Company Inc.</span>
+            </figcaption>
+          </figure>
+          <blockquote class="customer__quote text mod-medium">
+            Vestibulum placerat nisl quis justo venenatis, et lacinia nunc venenatis. semper libero nec sapien condimentum dignissim. Nunc ante ligula, tempor in tellus in, gravida vestibulum justo. Nulla facilisi. Nullam tristique eros quis nibh tempus, vel viverra dolor pretium. Nam et vehicula leo. Vivamus hendrerit sit amet ante a tempus. Aenean gravida massa et ante pulvinar, id
+          </blockquote>
+        </div>
+
+        <!-- switchers -->
+      </div>
+
+    </section>
+
+    <div class="bottom-wrapper">
+      <section class="contact container u-clear">
+        <h2 class="contact__title title mod-white u-text-center">Contact Us</h2>
+
+        <div class="contact__container u-clear">
+          <div class="contact__content u-left">
+            <article class="contact__article">
+              <h3 class="contact__subtitle">Get in touch with us</h3>
+              <p class="contact__text">
+                Nunc urna est, tristique et varius at, pharetra nec enim. Quisque rhoncus lacus fringilla nulla sollicitudin tristique.
+              </p>
+            </article>
+            <div class="contact__social u-clear">
+              <a href="#" class="contact__social-link mod-facebook u-left"></a>
+              <a href="#" class="contact__social-link mod-twitter u-left"></a>
+              <a href="#" class="contact__social-link mod-google u-left"></a>
+            </div>
+
+            <div class="contact__info">
+              <a href="tel:+141575678256" class="contact__tel">+14-1575 - 6782 - 56</a>
+              <a href="mailto:businessname@gmail.com" class="contact__email">Businessname@gmail.com</a>
+            </div>
+          </div>
+
+          <div class="contact__form-wrapper u-right">
+            <form action="#">
+              <fieldset class="contact__form-fieldset u-clear">
+                <input name="name" class="input u-left" type="text" placeholder="Name" />
+                <input name="email" class="input u-left" type="email" placeholder="Email" />
+              </fieldset>
+              <textarea name="message" class="input mod-textarea" placeholder="Message"></textarea>
+              <button class="contact__submit u-right u-clear" type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="container">
+          <p class="footer__copy u-left">
+            &copy; 2003-2015 Business Name, All Rights Reserved
+          </p>
+          <span class="footer__copy u-right">
+            Designed by
+            <a class="footer__link" href="#" target="_blank">Colorpixels.net</a>
+          </span>
+        </div>
+      </footer>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
