Update gitignore. Update features styles, rename features__title -> features__heading. Improve team section (responsive design, etc). Improve watch section (responsive). Small updates.

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
           </a>
           <!-- TODO: on click, on scroll, on key press -->
           <nav class="header__nav u-right" role="navigation">
-            <a href="#" tabindex="-1" class="header__link is-active text mod-small mod-bold">Home</a>
+            <a href="#" class="header__link text mod-small mod-bold">Home</a>
             <!-- TODO: reconsider the usage of .text -->
             <a href="#features" class="header__link text mod-small mod-bold">Features</a>
             <a href="#team" class="header__link text mod-small mod-bold">Team</a>
@@ -72,7 +72,7 @@
     </div>
 
     <section id="features" class="features container u-clear">
-      <h2 class="title u-text-center">Key Features</h2>
+      <h2 class="features__title title u-text-center">Key Features</h2>
       <p class="features__intro text mod-medium u-text-center">
         Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque neque. In sit amet lectus non lacus sollicitudin cursus a vitae felis. Praesent luctus mi quis nisi interdum eleifend.
       </p>
@@ -80,7 +80,7 @@
         <div class="features__block mod-first u-left">
           <article class="features__item mod-person">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -88,7 +88,7 @@
           </article>
           <article class="features__item mod-map">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -96,7 +96,7 @@
           </article>
           <article class="features__item mod-like">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -111,7 +111,7 @@
         <div class="features__block mod-last u-right">
           <article class="features__item mod-earphones">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -119,7 +119,7 @@
           </article>
           <article class="features__item mod-point">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -127,7 +127,7 @@
           </article>
           <article class="features__item mod-compass">
             <div class="features__desc">
-              <h3 class="features__title text mod-medium mod-bold">Amet varius</h3>
+              <h3 class="features__heading text mod-medium mod-bold">Amet varius</h3>
               <p class="features__text text mod-small">
                 Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus diam a iaculis malesuada
               </p>
@@ -164,7 +164,7 @@
         Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque neque. In sit amet lectus non lacus sollicitudin cursus a vitae felis. Praesent luctus mi quis nisi interdum eleifend.
       </p>
 
-      <div class="team__item u-text-center u-left">
+      <div class="team__item u-text-center">
         <div class="team__block">
           <img src="images/team/team-1.jpg" alt="Jon Doe" class="team__photo" />
           <div class="team__info">
@@ -181,7 +181,7 @@
         <span class="team__position text mod-small">Managing Director</span>
       </div>
 
-      <div class="team__item u-text-center u-left">
+      <div class="team__item u-text-center">
         <div class="team__block">
           <img src="images/team/team-2.jpg" alt="Jon Doe" class="team__photo" />
           <div class="team__info">
@@ -198,7 +198,7 @@
         <span class="team__position text mod-small">Lead Designer</span>
       </div>
 
-      <div class="team__item u-text-center u-left">
+      <div class="team__item u-text-center">
         <div class="team__block">
           <img src="images/team/team-3.jpg" alt="Jon Doe" class="team__photo" />
           <div class="team__info">
@@ -215,7 +215,7 @@
         <span class="team__position text mod-small">Lead Developer</span>
       </div>
 
-      <div class="team__item u-text-center u-left">
+      <div class="team__item u-text-center">
         <div class="team__block">
           <img src="images/team/team-4.jpg" alt="Jon Doe" class="team__photo" />
           <div class="team__info">
@@ -233,7 +233,7 @@
       </div>
     </section>
 
-    <section id="testimonials" class="customers">
+    <section id="testimonials" class="customers u-clear">
       <h2 class="customers__title title u-text-center">What our customer’s say</h2>
 
       <div class="customers__container js-carousel">
