Implement script to fire off animation on page load. Update intro styles. Apply animations. Small updates.

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
 
         <div class="watch__container u-right">
           <iframe src="https://player.vimeo.com/video/49780741?title=0&byline=0&portrait=0"
-                  width="100%"
+                  width="500"
                   height="307"
                   frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
