--- a/app/index.html
+++ b/app/index.html
@@ -40,12 +40,12 @@
           </a>
           <!-- TODO: on click, on scroll, on key press -->
           <nav class="header__nav u-right" role="navigation">
-            <a href="#" class="header__link text mod-small mod-bold">Home</a>
+            <a href="#" class="header__link text mod-small mod-bold js-nav-link">Home</a>
             <!-- TODO: reconsider the usage of .text -->
-            <a href="#features" class="header__link text mod-small mod-bold">Features</a>
-            <a href="#team" class="header__link text mod-small mod-bold">Team</a>
-            <a href="#testimonials" class="header__link text mod-small mod-bold">Testimonials</a>
-            <a href="#contact" class="header__link text mod-small mod-bold">Contact</a>
+            <a href="#features" class="header__link text mod-small mod-bold js-nav-link">Features</a>
+            <a href="#team" class="header__link text mod-small mod-bold js-nav-link">Team</a>
+            <a href="#testimonials" class="header__link text mod-small mod-bold js-nav-link">Testimonials</a>
+            <a href="#contact" class="header__link text mod-small mod-bold js-nav-link">Contact</a>
           </nav>
         </div>
       </header>
