Apply animation for download button. Small updates.

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
             <li class="intro__item">Integer ut mattis nulla, eget vehicula elit</li>
             <li class="intro__item">Praesent rutrum ac nunc et</li>
           </ul>
-          <button class="intro__btn">
+          <button class="intro__btn js-download-link">
             <span class="text u-left">Download</span>
           </button>
         </div>
